<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:padding="24dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="24dp"
        android:elevation="4dp"
        android:clipToPadding="false"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/patient_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="outline"
            app:hintEnabled="true"
            android:hint="@string/patient_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/patient_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="12dp"
                android:padding="12dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="outline"
            android:hint="@string/select_location_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:clickable="true"
                android:drawableStart="@drawable/ic_location"
                android:drawableEnd="@drawable/ic_select_arrow_down"
                android:padding="12dp"
                android:drawablePadding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/blood_type_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="outline"
            android:hint="@string/blood_type_hint">

            <AutoCompleteTextView
                android:id="@+id/blood_type_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:drawableStart="@drawable/ic_blood_bag"
                android:padding="12dp"
                android:drawablePadding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/possible_donors_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="outline"
            android:hint="@string/possible_donors_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/possible_donors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:drawableStart="@drawable/ic_blood_donor"
                android:padding="12dp"
                android:drawablePadding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/deadline_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="outline"
            android:hint="@string/deadline_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_calendar"
                android:focusable="false"
                android:padding="12dp"
                android:drawablePadding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_request_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:backgroundTint="@color/red"
            app:cornerRadius="4dp"
            app:rippleColor="@color/lighter_red"
            android:text="@string/save_blood_request"
            android:textColor="@android:color/white"
            android:fontFamily="@font/exo_regular" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/request_blood_disclaimer"
            android:textSize="12sp"
            android:textColor="@color/gray_700"/>
    </LinearLayout>
</ScrollView>
